2001-11-22  WATANABE Katsuyuki <katsuyuki_1.watanabe@toppan.co.jp>

	* [w3m-dev 02497] 
	* url.c (parseURL2): fix #ifdef __EMX__ code
	* indep.c (cleanupName): remove #if 0 /* SUPPORT_NETBIOS_SHARE */ code

2001-11-22  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 02494]
	* configure (MIME_TYPES): check if mimetypes is empty
	* configure (label_topline): add missing =
	* configure (nextpage_topline): ditto

2001-11-22  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 02493]
	* scripts/multipart/Makefile: s/DISTDIR/DESTDIR/

2001-11-21  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 02481]
	* s/BG_COLOR/USE_BG_COLOR/
	* s/ANSI_COLOR/USE_ANSI_COLOR/
	* s/COLOR/USE_COLOR/
	* s/MENU/USE_MENU/
	* s/MOUSE/USE_MOUSE/

	* [w3m-dev 02480] new configure
	* config.h.dist: updated
	* configure: $def_emacs_like_lineedit, $def_vi_prec_num
	   $def_label_topline, $def_nextpage_topline
	   $def_use_mark, $def_use_gopher, $def_use_alarm
	* configure: add --{ssl,gc}-{include,lib}dir, --mimetypes
	* configure: BoehmGC Debian hack
	* XMakefile: add $(OPTS)
	* terms.c: use HAVE_SYS_SELECT_H
	* configure: add sys/select.h detection
	* configure: no_float_h -> float_h
	* configure: add chdir() detection
	* local.c (localcgi_post): use HAVE_CHDIR instead of __EMX__
	* local.c (localcgi_get): ditto
	* main.c: <time.h> no need for #ifdef __EMX__
	   other files already do #include <time.h>

	[w3m-dev 02479]
	* rc.c (init_rc): remove #ifdef __EMX__ for tmpdir
	* config.h.dit: updated
	* url.c (openURL): use CGI_EXTENSION
	  add extlen
	* rc.c (helpFile): remove #ifdef __EMX__
	  use w3m_help_dir()
	* w3mbookmark.c (lib_dir): removed
	* w3mbookmark.c (print_bookmark_panel): use w3m_lib_dir()
	* rc.c (libFile): remove #ifdef __EMX__
	  use w3m_lib_dir() 
	* local.c (get_os2_dft): removed
	* local.c (check_local_cgi): use w3m_lib_dir() instead of lib_dir
	* local.c (cgi_filename): ditto
	* indep.c (w3m_dir): added
	* indep.c (w3m_lib_dir w3m_help_dir): ditto