@@ -1,3 +1,8 @@
+2001-11-22  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>
+
+	* table.c (feed_table): fix the following table
+	  <table border=1><tr><td>&lt &lt;</table>
+
 2001-11-22  WATANABE Katsuyuki <katsuyuki_1.watanabe@toppan.co.jp>
 
 	* [w3m-dev 02497] 
